# serializer version: 1
# name: test_e2e_claude_on_modal_sample_projects[cmake_vcpkg_project]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Creating .devcontainer directory and copying required files.',
        'Creating Dockerfile for C++/CMake/vcpkg project.',
        'Building the Docker image to verify the setup.',
        'Running tests in the built container.',
      ]),
      'summary': "Everything worked. C++/CMake/vcpkg project using fmt library; vcpkg is cloned and bootstrapped inside the Dockerfile, dependencies pre-installed for caching, project built at image build time so `run_all_tests.sh` just runs `ctest`. CTest's `--output-junit` flag (available since CMake 3.21, Ubuntu 22.04 ships 3.22) generates JUnit XML directly.",
      'timed_out': False,
    }),
    'error_message': None,
    'generated_files': dict({
      'devcontainer_json': '''
        {
          "build": {
            "dockerfile": "Dockerfile",
            "context": "..",
            "options": [
              "--network=host"
            ]
          },
          "runArgs": [
            "--network=host"
          ]
        }
  
      ''',
      'dockerfile': '''
        FROM ubuntu:22.04
        
        ENV DEBIAN_FRONTEND=noninteractive
        
        # Install system dependencies
        RUN apt-get update && apt-get install -y \
            build-essential \
            cmake \
            git \
            curl \
            zip \
            unzip \
            tar \
            pkg-config \
            ninja-build \
            perl-base \
            ca-certificates \
            && rm -rf /var/lib/apt/lists/*
        
        # Set up timestamp helper script.
        COPY ./.devcontainer/timestamp_process_output.pl /timestamp_process_output.pl
        
        # Create test artifacts directory.
        RUN mkdir -p /test_artifacts && chmod 777 /test_artifacts
        
        # Install and bootstrap vcpkg
        ENV VCPKG_ROOT=/vcpkg
        RUN git clone https://github.com/microsoft/vcpkg.git $VCPKG_ROOT && \
            $VCPKG_ROOT/bootstrap-vcpkg.sh -disableMetrics
        
        # Copy vcpkg manifest first to pre-warm the package cache
        WORKDIR /project_src
        COPY vcpkg.json ./
        
        # Pre-install vcpkg dependencies using manifest mode (cache this layer)
        RUN $VCPKG_ROOT/vcpkg install --no-print-usage
        
        # Copy source code and build files
        COPY CMakeLists.txt ./
        COPY src/ ./src/
        COPY tests/ ./tests/
        
        # Configure and build the project
        RUN cmake -B build -S . \
            -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake \
            -DCMAKE_BUILD_TYPE=Release && \
            cmake --build build --parallel $(nproc)
        
        # Copy the test runner script last (this changes often during development)
        COPY .devcontainer/run_all_tests.sh /run_all_tests.sh
        RUN chmod +x /run_all_tests.sh
  
      ''',
      'run_all_tests_sh': '''
        #!/bin/bash
        set -euo pipefail
        
        mkdir -p /test_artifacts/junit
        
        cd /project_src
        
        echo "Running tests with CTest..."
        
        /timestamp_process_output.pl --logfile /test_artifacts/ctest.log \
            ctest --test-dir build \
                --output-on-failure \
                --output-junit /test_artifacts/junit/ctest.xml \
                -V
        
        echo '{"success": true}' > /test_artifacts/final_result.json
        echo "All tests passed!"
  
      ''',
    }),
    'success': True,
    'verification': dict({
      'error_message': None,
      'success': True,
      'test_results': list([
        dict({
          'name': 'test_greeter::test_greeter',
          'passed': True,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
# name: test_e2e_claude_on_modal_sample_projects[fullstack_project]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Creating Dockerfile and test runner for Python/Flask backend + Node.js frontend project.',
        'Building the Docker image to verify the setup.',
        'Fixing Dockerfile - no uv.lock file exists, switching to direct pip install.',
        'Build succeeded. Running tests now.',
      ]),
      'summary': 'Everything worked. The project is a Python Flask backend + Node.js frontend with integration tests. Key points: no uv.lock file exists so used `uv pip install` directly rather than `uv sync --locked`; the Node.js frontend tests use the built-in `node --test` runner with `--test-reporter=junit` for JUnit XML output; the frontend integration tests start the Flask server as a subprocess, so both Python (with Flask) and Node.js must be in the same container image.',
      'timed_out': False,
    }),
    'error_message': None,
    'generated_files': dict({
      'devcontainer_json': '''
        {
          "build": {
            "dockerfile": "Dockerfile",
            "context": "..",
            "options": [
              "--network=host"
            ]
          },
          "runArgs": [
            "--network=host"
          ]
        }
  
      ''',
      'dockerfile': '''
        FROM python:3.12-slim
        
        # Install system dependencies including perl and Node.js prerequisites
        RUN apt-get update && apt-get install -y \
            perl-base \
            curl \
            ca-certificates \
            && rm -rf /var/lib/apt/lists/*
        
        # Install Node.js 20 LTS
        RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
            && apt-get install -y nodejs \
            && rm -rf /var/lib/apt/lists/*
        
        # Set up timestamp helper script.
        COPY ./.devcontainer/timestamp_process_output.pl /timestamp_process_output.pl
        
        # Create test artifacts directory.
        RUN mkdir -p /test_artifacts && chmod 777 /test_artifacts
        
        # Copy uv from official image.
        COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
        
        # Very important on Modal -- without this, there is a crazy bug that means that some files do not show up in snapshots!
        # This is because Modal's snapshotting mechanism does not work correctly with symlinks.
        ENV UV_LINK_MODE=copy
        
        # Pre-create uv virtual environment and install Python dependencies.
        ENV UV_PROJECT_ENVIRONMENT=/venv
        RUN uv venv /venv && \
            uv pip install --python /venv/bin/python flask pytest
        
        # Add venv to PATH
        ENV PATH="/venv/bin:$PATH"
        
        # Copy project source files
        WORKDIR /project_src
        COPY backend/ ./backend/
        COPY frontend/ ./frontend/
        
        # Copy the test runner script last (this changes often during development)
        COPY .devcontainer/run_all_tests.sh /run_all_tests.sh
        RUN chmod +x /run_all_tests.sh
  
      ''',
      'run_all_tests_sh': '''
        #!/usr/bin/env bash
        set -euo pipefail
        
        mkdir -p /test_artifacts/junit
        
        echo "=== Running backend Python tests ==="
        cd /project_src/backend
        /timestamp_process_output.pl --logfile /test_artifacts/pytest.log \
            pytest --junitxml=/test_artifacts/junit/pytest.xml -v .
        
        echo "=== Running frontend Node.js tests ==="
        cd /project_src/frontend
        /timestamp_process_output.pl --logfile /test_artifacts/node_test.log \
            timeout 30 node --test --test-reporter=junit --test-reporter-destination=/test_artifacts/junit/node.xml
        
        echo "=== All tests completed ==="
        
        # Write final result
        cat > /test_artifacts/final_result.json <<'EOF'
        {"status": "success"}
        EOF
  
      ''',
    }),
    'success': True,
    'verification': dict({
      'error_message': None,
      'success': True,
      'test_results': list([
        dict({
          'name': 'test::add via API',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test::multiply via API',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'server_test::test_server_is_running',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test_simple::test_pass',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test_simple::test_also_passes',
          'passed': True,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
# name: test_e2e_claude_on_modal_sample_projects[python_project]
  dict({
    'agent': dict({
      'cost': dict({
        'ccusage_raw': dict({
          'cacheCreationTokens': 38870,
          'cacheReadTokens': 144151,
          'inputTokens': 125,
          'lastActivity': '2026-03-24',
          'modelBreakdowns': list([
            dict({
              'cacheCreationTokens': 38870,
              'cacheReadTokens': 144151,
              'cost': 0.32326299999999997,
              'inputTokens': 125,
              'modelName': 'claude-opus-4-6',
              'outputTokens': 305,
            }),
          ]),
          'modelsUsed': list([
            'claude-opus-4-6',
          ]),
          'outputTokens': 305,
          'projectPath': 'Unknown Project',
          'sessionId': '-project',
          'totalCost': 0.32326299999999997,
          'totalTokens': 183451,
        }),
        'cost_usd': 0.32326299999999997,
        'cost_usd_computed': 0.0,
        'token_spending': dict({
          'cache_creation': 38870,
          'cached': 144151,
          'input': 125,
          'output': 305,
        }),
      }),
      'cost_limit_exceeded': False,
      'duration_seconds': 88.39384349994361,
      'end_time': '2026-03-24T10:43:28.028200+00:00',
      'error_messages': list([
      ]),
      'exit_code': 0,
      'start_time': '2026-03-24T10:41:48.901906+00:00',
      'status_messages': list([
        dict({
          'message': 'Exploring repository structure to identify project type and test framework.',
          'timestamp': '2026-03-24T10:42:09.450270+00:00',
        }),
      ]),
      'summary': dict({
        'message': 'Everything worked. Simple Python project with pytest — used python:3.11-slim base image with uv for fast dependency installation. Only needed to set PYTHONPATH so tests could import the `app` module. All 2 tests pass, JUnit XML generated natively by pytest.',
        'timestamp': '2026-03-24T10:43:10.004147+00:00',
      }),
      'timed_out': False,
    }),
    'cli_args': list([
      '/Users/thad/.cursor/extensions/ms-python.python-2025.6.1-darwin-arm64/python_files/vscode_pytest/run_pytest_script.py',
      '-sv',
      '--log-cli-level=DEBUG',
      '--snapshot-update',
      '--rootdir=/Users/thad/Imbue Dropbox/Thad Hughes/src/keystone',
    ]),
    'error_message': None,
    'generated_files': dict({
      'devcontainer_json': '''
        {
          "build": {
            "dockerfile": "Dockerfile",
            "context": "..",
            "options": [
              "--network=host"
            ]
          },
          "runArgs": [
            "--network=host"
          ]
        }
  
      ''',
      'dockerfile': '''
        FROM python:3.11-slim
        
        # Create test artifacts directory.
        RUN mkdir -p /test_artifacts && chmod 777 /test_artifacts
        
        # Copy uv from official image.
        COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
        ENV UV_LINK_MODE=copy
        ENV UV_PROJECT_ENVIRONMENT=/venv
        
        # Copy dependency files first for caching
        WORKDIR /project_src
        COPY pyproject.toml uv.lock ./
        
        # Install dependencies
        RUN uv sync --locked --no-install-project
        
        # Copy source code
        COPY app.py ./
        COPY tests/ ./tests/
        
        # Copy the test runner script last (this changes often during development)
        COPY .devcontainer/run_all_tests.sh /run_all_tests.sh
        RUN chmod +x /run_all_tests.sh
  
      ''',
      'run_all_tests_sh': '''
        #!/bin/bash
        set -euo pipefail
        
        mkdir -p /test_artifacts/junit
        
        cd /project_src
        export PYTHONPATH=/project_src:${PYTHONPATH:-}
        /venv/bin/pytest tests/ --junitxml=/test_artifacts/junit/results.xml -v
        
        echo '{"success": true}' > /test_artifacts/final_result.json
  
      ''',
    }),
    'success': True,
    'verification': dict({
      'error_message': None,
      'image_build_seconds': 3.0637450218200684,
      'success': True,
      'test_execution_seconds': 2.105252742767334,
      'test_results': list([
        dict({
          'name': 'tests.test_app::test_add',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'tests.test_app::test_multiply',
          'passed': True,
          'skipped': False,
        }),
      ]),
      'tests_failed': 0,
      'tests_passed': 2,
      'tests_skipped': 0,
    }),
  })
# ---
# name: test_e2e_claude_on_modal_sample_projects[python_with_failing_test]
  dict({
    'agent': dict({
      'cost': dict({
        'ccusage_raw': dict({
          'cacheCreationTokens': 16034,
          'cacheReadTokens': 110898,
          'inputTokens': 109,
          'lastActivity': '2026-03-24',
          'modelBreakdowns': list([
            dict({
              'cacheCreationTokens': 16034,
              'cacheReadTokens': 110898,
              'cost': 0.1612065,
              'inputTokens': 109,
              'modelName': 'claude-opus-4-6',
              'outputTokens': 200,
            }),
          ]),
          'modelsUsed': list([
            'claude-opus-4-6',
          ]),
          'outputTokens': 200,
          'projectPath': 'Unknown Project',
          'sessionId': '-project',
          'totalCost': 0.1612065,
          'totalTokens': 127241,
        }),
        'cost_usd': 0.1612065,
        'cost_usd_computed': 0.0,
        'token_spending': dict({
          'cache_creation': 16034,
          'cached': 110898,
          'input': 109,
          'output': 200,
        }),
      }),
      'cost_limit_exceeded': False,
      'duration_seconds': 84.04371233307756,
      'end_time': '2026-03-24T10:45:02.600119+00:00',
      'error_messages': list([
      ]),
      'exit_code': 0,
      'start_time': '2026-03-24T10:43:28.156621+00:00',
      'status_messages': list([
        dict({
          'message': 'Exploring repository structure to identify project type and test framework.',
          'timestamp': '2026-03-24T10:43:49.633799+00:00',
        }),
        dict({
          'message': 'Creating Dockerfile and test runner for simple Python/pytest project with one intentionally failing test to disable.',
          'timestamp': '2026-03-24T10:44:05.075864+00:00',
        }),
      ]),
      'summary': dict({
        'message': 'Everything worked on the first try. Simple Python project using pytest with uv for fast dependency management. The project had one intentionally failing test (`test_impossible`) which I removed via `sed` in the Dockerfile. Base image is `python:3.12-slim` with uv copied from the official image. 2 tests pass.',
        'timestamp': '2026-03-24T10:44:45.742744+00:00',
      }),
      'timed_out': False,
    }),
    'cli_args': list([
      '/Users/thad/.cursor/extensions/ms-python.python-2025.6.1-darwin-arm64/python_files/vscode_pytest/run_pytest_script.py',
      '-sv',
      '--log-cli-level=DEBUG',
      '--snapshot-update',
      '--rootdir=/Users/thad/Imbue Dropbox/Thad Hughes/src/keystone',
    ]),
    'error_message': None,
    'generated_files': dict({
      'devcontainer_json': '''
        {
          "build": {
            "dockerfile": "Dockerfile",
            "context": "..",
            "options": [
              "--network=host"
            ]
          },
          "runArgs": [
            "--network=host"
          ]
        }
  
      ''',
      'dockerfile': '''
        FROM python:3.12-slim
        
        # Create test artifacts directory.
        RUN mkdir -p /test_artifacts && chmod 777 /test_artifacts
        
        COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
        
        ENV UV_PROJECT_ENVIRONMENT=/venv
        ENV UV_LINK_MODE=copy
        
        WORKDIR /project_src
        
        COPY pyproject.toml uv.lock ./
        RUN uv sync --locked --no-install-project
        
        COPY app.py ./
        COPY tests/ ./tests/
        
        # Remove the intentionally failing test
        RUN sed -i '/def test_impossible/,/always fail"/d' tests/test_app.py
        
        # Copy the test runner script last (this changes often during development)
        COPY .devcontainer/run_all_tests.sh /run_all_tests.sh
        RUN chmod +x /run_all_tests.sh
  
      ''',
      'run_all_tests_sh': '''
        #!/bin/bash
        set -euo pipefail
        
        mkdir -p /test_artifacts/junit
        
        cd /project_src
        export PYTHONPATH=/project_src:${PYTHONPATH:-}
        
        /venv/bin/pytest tests/ --junitxml=/test_artifacts/junit/results.xml -v 2>&1
        
        echo '{"success": true}' > /test_artifacts/final_result.json
  
      ''',
    }),
    'success': True,
    'verification': dict({
      'error_message': None,
      'image_build_seconds': 3.4369289875030518,
      'success': True,
      'test_execution_seconds': 1.7990679740905762,
      'test_results': list([
        dict({
          'name': 'tests.test_app::test_add',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'tests.test_app::test_multiply',
          'passed': True,
          'skipped': False,
        }),
      ]),
      'tests_failed': 0,
      'tests_passed': 2,
      'tests_skipped': 0,
    }),
  })
# ---
